--- a/style.css
+++ b/style.css
@@ -1,59 +1,36 @@
-/* Format Fixer Styles */
-
-.format-fixer-settings {
-    padding: 10px;
+/* Settings panel styling */
+.format-fixer-settings .format_fixer_block {
+    margin-bottom: 1rem;
 }
 
-.format-fixer-block {
-    margin-bottom: 15px;
+.format-fixer-settings .format_fixer_block label {
+    display: block;
+    margin-bottom: 0.5rem;
 }
 
-.format-fixer-block h4 {
-    margin: 5px 0;
-    color: var(--grey70);
-}
-
-.format-fixer-block p {
-    margin: 5px 0;
-    color: var(--grey70);
-    font-size: 0.9em;
-}
-
-.format-fixer-block select {
+.format-fixer-settings select,
+.format-fixer-settings textarea {
     width: 100%;
-    margin: 5px 0;
-    padding: 5px;
-    background-color: var(--black30);
-    border: 1px solid var(--black50);
-    color: var(--grey80);
+    margin-bottom: 0.5rem;
 }
 
-.format-fixer-block textarea {
-    width: 100%;
-    margin: 5px 0;
-    padding: 5px;
-    background-color: var(--black30);
-    border: 1px solid var(--black50);
-    color: var(--grey80);
+.format-fixer-settings textarea {
     font-family: monospace;
     resize: vertical;
+    min-height: 4em;
 }
 
-/* Format button in message area */
+.format-fixer-settings #format_fixer_test_output {
+    background-color: var(--black50a);
+    color: var(--white75a);
+}
+
+/* Format button styling in message area */
 #format_message {
-    padding: 5px 10px;
-    margin-right: 5px;
-    background-color: var(--black30);
-    border: 1px solid var(--black50);
-    color: var(--grey80);
-    cursor: pointer;
-    transition: background-color 0.2s;
+    opacity: 0.7;
+    transition: opacity 0.2s ease;
 }
 
 #format_message:hover {
-    background-color: var(--black50);
-}
-
-#format_message i {
-    margin-right: 0;
+    opacity: 1;
 }
